--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyReader</string>
+    <string name="app_name">eReader</string>
 
     <string name="drawer_open">DrawerOpen</string>
     <string name="drawer_close">DrawerClose</string>
